# vulkan-multithreaded

./: .gitignore  CMakeLists.txt  \  compile.lua  shaders.lua
shaders/: triangle.slang
src/: buffers.cpp  buffers.ixx  command_buffer.ixx  command_pool.cpp  command_pool.ixx  device.cpp  device.ixx  instance.cpp  instance.ixx  main.cpp  mesh.cpp  mesh.ixx  pipeline.cpp  pipeline.ixx  swapchain.cpp  swapchain.ixx  thread_pool.ixx  window.cpp  window.ixx
